# routes/index.js
@@ -4,5 +4,6 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 router.use('/inventory', require('./inventory'));
 router.use('/', require('./inventory'));
+router.use('/user', require('./user'));
 
 module.exports = router;
